syntax = "proto3";

import "cloud/storage/core/protos/error.proto";
import "cloud/filestore/public/api/protos/headers.proto";
import "cloud/filestore/public/api/protos/node.proto";

package NCloud.NFileStore.NProto;

option java_package = "ru.yandex.cloud.filestore.proto";
option go_package = "a.yandex-team.ru/cloud/filestore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////
// CreateHandle request/response

message TCreateHandleRequest
{
    enum EFlags
    {
        E_NONE = 0;
        E_READ = 1;
        E_WRITE = 2;
        E_CREATE = 3;
        E_EXCLUSIVE = 4;
        E_APPEND = 5;
        E_TRUNCATE = 6;
        E_DIRECTORY = 7;
        E_NOATIME = 8;
        E_NOFOLLOW = 9;
        E_NONBLOCK = 10;
        E_PATH = 11;

        // TODO: these flags have no meaning or only useful for the local svc
        // E_ASYNC
        // E_CLOEXEC
        // E_DIRECT
        // E_DSYNC
        // E_LARGEFILE
        // E_NOCTTY
        // E_SYNC
    };

    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Parent node.
    uint64 NodeId = 3;

    // Node name
    bytes Name = 4;

    // Flags.
    uint32 Flags = 5;

    // Create mode.
    uint32 Mode = 6;

    // Create owner
    uint64 Uid = 10;

    // Create group
    uint64 Gid = 11;
}

message TCreateHandleResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;

    // IO handle.
    uint64 Handle = 2;

    // Node Attr
    TNodeAttr NodeAttr = 3;
}

////////////////////////////////////////////////////////////////////////////////
// DestroyHandle request/response

message TDestroyHandleRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;
}

message TDestroyHandleResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}

////////////////////////////////////////////////////////////////////////////////
// ReadData request/response

message TReadDataRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Starting offset for read.
    uint64 Offset = 5;

    // Number of bytes to read.
    uint64 Length = 6;
}

message TReadDataResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;

    // Buffer with bytes read.
    bytes Buffer = 2;
}

////////////////////////////////////////////////////////////////////////////////
// WriteData request/response

message TWriteDataRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Starting offset for write.
    uint64 Offset = 5;

    // Buffer with bytes to write.
    bytes Buffer = 6;
}

message TWriteDataResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}

////////////////////////////////////////////////////////////////////////////////
// AllocateData request/response

message TAllocateDataRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Starting offset for write.
    uint64 Offset = 5;

    // Number of bytes to allocate.
    uint64 Length = 6;
}

message TAllocateDataResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}

////////////////////////////////////////////////////////////////////////////////
// TruncateData request/response

message TTruncateDataRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Number of bytes to keep.
    uint64 Length = 6;
}

message TTruncateDataResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}
